+ switched google format style